--- a/blog-2.html
+++ b/blog-2.html
@@ -221,12 +221,13 @@
               Standard: NPR 3,000 - NPR 4,000 per square foot Premium
               Construction: NPR 4,000 - NPR 5,000 and beyond per square foot.
             </p>
-
+            <div class="col-lg-8 mx-auto">
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/blog-3.webp"
               alt=""
             />
+            </div>
             <h4 class="text-uppercase mb-3 text-primary">
               3. Detailed Budget Breakdown
             </h4>
