--- a/blog-4.html
+++ b/blog-4.html
@@ -208,12 +208,13 @@
               which mirror the profound spiritual importance of spatial
               integration and balance.
             </p>
-
+            <div class="col-lg-8 mx-auto">
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/b-1.webp"
               alt=""
             />
+            </div>
             <h4 class="text-uppercase mb-3 text-primary">
               3. Detailed Budget Breakdown
             </h4>
