--- a/blog-6.html
+++ b/blog-6.html
@@ -111,7 +111,7 @@
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="service.html" class="nav-item nav-link">Service</a>
             <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
-            <a href="blog.html" class="nav-item nav-link">Blogs</a>
+            <a href="blog.html" class="nav-item nav-link active">Blogs</a>
             <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Blogs</a>
                     <div class="dropdown-menu m-0">
@@ -144,7 +144,7 @@
     <!-- Blog Start -->
     <div class="container-fluid bg-yellow py-6 px-5">
       <div class="row g-5">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
@@ -248,11 +248,14 @@
               city.
             </p>
 
+            <div class="col-lg-8 mx-auto">
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/b-3.jpeg"
               alt=""
+              
             />
+            </div>
             <h4 class="text-uppercase mb-3 text-primary">
               4. Social and Cultural Sustainability
             </h4>
@@ -317,100 +320,7 @@
           <!-- Blog Detail End -->
         </div>
 
-        <!-- Sidebar Start -->
-        <div class="col-lg-4">
-          <!-- Category Start -->
-          <div class="mb-5">
-            <h3 class="text-uppercase mb-4 text-primary">Offers</h3>
-            <div class="d-flex flex-column justify-content-start bg-dark p-4">
-              <a class="h6 text-uppercase mb-4" href="contact.html"
-                ><i class="fa fa-angle-right me-2"></i>New Year Offer</a
-              >
-              <a class="h6 text-uppercase mb-4" href="contact.html"
-                ><i class="fa fa-angle-right me-2"></i>Dashain Offer</a
-              >
-              <a class="h6 text-uppercase mb-4" href="contact.html"
-                ><i class="fa fa-angle-right me-2"></i>Tihar Offer</a
-              >
-            </div>
-          </div>
-          <!-- Category End -->
-
-          <!-- Recent Post Start -->
-          <!-- <div class="mb-5">
-                    <h3 class="text-uppercase mb-4">Recent Post</h3>
-                    <div class="bg-light p-4">
-                        <div class="d-flex mb-3">
-                            <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img class="img-fluid" src="img/blog-2.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img class="img-fluid" src="img/blog-3.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img class="img-fluid" src="img/blog-2.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                        <div class="d-flex">
-                            <img class="img-fluid" src="img/blog-3.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-                            <a href="" class="h6 d-flex align-items-center bg-white text-uppercase px-3 mb-0">Lorem ipsum dolor sit amet consec adipis
-                            </a>
-                        </div>
-                    </div>
-                </div> -->
-          <!-- Recent Post End -->
-
-          <!-- Image Start -->
-          <div class="mb-5">
-            <img src="img/blog-1.jpg" alt="" class="img-fluid rounded" />
-          </div>
-          <!-- Image End -->
-
-          <!-- Tags Start -->
-          <!-- <div class="mb-5">
-                    <h3 class="text-uppercase mb-4">Tag Cloud</h3>
-                    <div class="d-flex flex-wrap m-n1">
-                        <a href="" class="btn btn-outline-dark m-1">Design</a>
-                        <a href="" class="btn btn-outline-dark m-1">Development</a>
-                        <a href="" class="btn btn-outline-dark m-1">Marketing</a>
-                        <a href="" class="btn btn-outline-dark m-1">SEO</a>
-                        <a href="" class="btn btn-outline-dark m-1">Writing</a>
-                        <a href="" class="btn btn-outline-dark m-1">Consulting</a>
-                        <a href="" class="btn btn-outline-dark m-1">Design</a>
-                        <a href="" class="btn btn-outline-dark m-1">Development</a>
-                        <a href="" class="btn btn-outline-dark m-1">Marketing</a>
-                        <a href="" class="btn btn-outline-dark m-1">SEO</a>
-                        <a href="" class="btn btn-outline-dark m-1">Writing</a>
-                        <a href="" class="btn btn-outline-dark m-1">Consulting</a>
-                    </div>
-                </div> -->
-          <!-- Tags End -->
-
-          <!-- Plain Text Start -->
-          <!-- <div>
-                    <h3 class="text-uppercase mb-4">Plain Text</h3>
-                    <div class="bg-light rounded text-center" style="padding: 30px;">
-                        <p>Vero sea et accusam justo dolor accusam lorem consetetur, dolores sit amet sit dolor clita kasd justo, diam accusam no sea ut tempor magna takimata, amet sit et diam dolor ipsum amet diam</p>
-                        <a href="" class="btn btn-primary py-2 px-4">Read More</a>
-                    </div>
-                </div> -->
-          <!-- Plain Text End -->
-        </div>
-        <!-- Sidebar End -->
+      
       </div>
     </div>
     <!-- Blog End -->
