--- a/blog-3.html
+++ b/blog-3.html
@@ -251,12 +251,13 @@
               management of expectations and the timely resolution of any
               problems.
             </p>
-
+            <div class="col-lg-8 mx-auto">
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/blog-2.webp"
               alt=""
             />
+            </div>
             <h4 class="text-uppercase mb-3 text-primary">
               6. Safety and Compliance
             </h4>
