--- a/blog-5.html
+++ b/blog-5.html
@@ -227,11 +227,13 @@
               city.
             </p>
 
+            <div class="col-lg-8 mx-auto">
             <img
               class="img-fluid w-100 rounded mb-5"
               src="img/blog/b-3.jpeg"
               alt=""
             />
+            </div>
             <h4 class="text-uppercase mb-3 text-primary">
               4. Cultural and Historical Significance
             </h4>
