--- a/blog-9.html
+++ b/blog-9.html
@@ -148,167 +148,106 @@
           <!-- Blog Detail Start -->
           <div class="mb-5">
             <h1 class="text-uppercase mb-3">
-              Pagoda-Style Temples:
-              <span class="text-primary">A Glimpse into Spirituality</span>
+              Symbolism and Spiritual
+              <span class="text-primary">Significance of pagoda</span>
             </h1>
             <p>
-              In Nepal, especially in the Kathmandu Valley, pagoda-style temples
-              are renowned as highly emblematic and spiritually important
-              architectural structures. These temples, characterised by their
-              unique multi-tiered roofs and elaborate embellishments, provide an
-              intriguing insight into the spiritual and cultural traditions of
-              the area. Examine in detail the profound spiritual nature and
-              exceptional architectural design of pagoda-style temples.
+              Pagodas hold immense symbolism and convey profound spiritual
+              meaning in diverse civilisations, especially in East Asia.
+              Although their interpretations may differ based on the tradition,
+              some prevalent themes are:
             </p>
             <h4 class="text-uppercase mb-3 text-primary">
-              1. Architectural Design and Structure
+              1. Buddhist Symbolism
             </h4>
             <p>
-              The distinguishing characteristic of pagoda-style temples is their
-              multi-tiered roofs, usually consisting of three to five levels. A
-              cascading effect is produced by the steady reduction in size of
-              each tier below the one below. This design is not only visually
-              captivating but also holds great symbolic importance.
+              Within Buddhism, pagodas frequently serve as a representation of
+              the cosmic structure. The several tiers of a pagoda can symbolise
+              distinct degrees of life, ranging from the terrestrial domain to
+              the celestial domain. The structure is regarded as a miniature
+              representation of the cosmos, mirroring the ordered and harmonious
+              nature of the universe.
             </p>
             <p>
-              Situated at the highest point of the pagoda is a central spire or
-              finial, frequently embellished with religious emblems or
-              ornamental features. This spire symbolises the link between the
-              physical world and the spiritual, extending towards the celestial
-              sphere.
+              The successive levels of a pagoda can also represent the process
+              of attaining enlightenment. Every level symbolises a significant
+              progression in the spiritual quest, transitioning from the
+              physical sphere to elevated spiritual domains.
             </p>
             <p>
-              Typically, traditional pagodas have a blend of timber and stone
-              structural components. The timber elements, including elaborately
-              incised windows and eaves, are enhanced by stone foundations and
-              walls, resulting in a seamless integration of materials.
-            </p>
-            <p>
-              Pagoda temples are widely recognised for their intricate carvings
-              and extravagant ornamental elements. Each of these carvings serves
-              a symbolic or narrative function and includes representations of
-              gods, mythological settings, and floral patterns.
+              Stupa Influence: The pagoda is intricately connected to the stupa,
+              a historic Buddhist edifice that once functioned as a burial mound
+              for the remains of the Buddha or other significant individuals.
+              The hierarchical design of the pagoda reflects the function of the
+              stupa in storing holy artefacts and acting as a central location
+              for contemplation and devotion.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">
-              2. Spiritual and Symbolic Significance
+              2. Chinese Symbolism
             </h4>
             <p>
-              Representation of Mount Meru: In Hindu and Buddhist cosmology, the
-              pagoda is commonly seen as a depiction of Mount Meru, which is
-              considered the central point of the universe. The multi-tiered
-              building represents the revered mountain, thought to serve as the
-              fundamental link between the mortal world and the divine.
+              Harmony and Balance: Within traditional Chinese culture, pagodas
+              are commonly seen as emblematic of harmony and equilibrium. Their
+              deliberate symmetrical design and incorporation of feng shui
+              concepts aim to establish a state of balance and tranquilly.
             </p>
             <p>
-              Symbolism of the Roof Tiers: Each stratum of the pagoda symbolises
-              distinct degrees of spiritual illumination. The progressive
-              diminution in dimensions from the lowermost point to the highest
-              point represents the rise from the physical realm to attain
-              spiritual transcendence.
-            </p>
-            <p>
-              The overhanging eaves of the pagoda's roofs are believed to
-              provide divine protection against detrimental elements and
-              destructive forces. Their creation of a protected environment is
-              highly favourable for the practice of meditation and prayer.
+              Cultural Heritage: Pagodas in China are moreover linked to
+              historical and cultural importance. Numerous ancient pagodas were
+              built either as integral components of temples or as memorial
+              edifices, therefore exemplifying the profound historical richness
+              and uninterrupted progression of Chinese civilisation.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">
-              3. Historical and Cultural Context
+              3. Japanese Symbolism
             </h4>
             <p>
-              Originating from ancient Indian architecture, the pagoda-style
-              temple underwent adaptation and development in Nepal, notably
-              during the Malla period (12th to 18th century). The design is a
-              manifestation of the hybrid impact of Hindu and Buddhist
-              architectural traditions.
+              Shinto and Buddhist Influence: Pagodas in Japan frequently
+              incorporate aspects from both Shinto and Buddhist traditions.
+              Their presence in Shinto shrines and Buddhist temples serves as a
+              representation of the amalgamation of these two spiritual courses.
             </p>
             <p>
-              The Malla dynasty made substantial contributions to the
-              construction of pagoda-style temples in the Kathmandu Valley
-              during their reign. Their rule witnessed the erection of numerous
-              notable pagodas, frequently commissioned to celebrate religious
-              occasions or to pay tribute to deities.
-            </p>
-            <p>
-              Pagoda-style temples function as central hubs for religious and
-              cultural events, facilitating cultural integration. These
-              structures are frequently located in significant urban areas or
-              places of religious pilgrimage, effortlessly assimilating into the
-              everyday routines and religious rituals of the nearby population.
+              Nature and Spirituality: Typically situated in tranquil natural
+              environments, Japanese pagodas are designed to highlight the
+              harmonious coexistence with the surrounding scenery. This
+              exemplifies the Japanese spiritual conviction in the inherent
+              interdependence between nature and the divine.
             </p>
 
             <div class="col-lg-8 mx-auto">
               <img
                 class="img-fluid w-100 rounded mb-5"
-                src="img/blog/b-6.webp"
+                src="img/blog/b-7.webp"
                 alt=""
               />
             </div>
             <h4 class="text-uppercase mb-3 text-primary">
-              4. Preservation and Restoration
+              4. Architectural Significance
             </h4>
             <p>
-              Pagoda-style temples have traditionally shown remarkable
-              resilience to natural calamities, much as earthquakes. Their
-              structural stability is enhanced by the intricate tiered design
-              and adaptable wooden joints. Yet, recent seismic events, such as
-              the 2015 Nepal earthquake, resulted in substantial destruction,
-              leading to a thorough effort to restore the affected areas.
+              The vertical orientation of pagodas symbolises the desire to
+              attain elevated spiritual levels. The ascending sequence of the
+              levels symbolises the concept of spiritual elevation and
+              illumination.
             </p>
             <p>
-              The primary objective of restoration projects is to maintain the
-              authentic architectural integrity and excellent workmanship of
-              pagoda-style temples. This entails painstaking effort to restore
-              and rebuild impaired components while preserving conventional
-              methods and materials.
-            </p>
-            <p>
-              The preservation of cultural and spiritual history is an integral
-              aspect of the restoration of pagoda temples, extending beyond just
-              physical maintenance. Such endeavours guarantee the ongoing
-              function of the temples as significant religious and cultural
-              symbols.
-            </p>
-
-            <h4 class="text-uppercase mb-3 text-primary">
-              5. Modern Relevance and Influence
-            </h4>
-            <p>
-              The architectural design of the pagoda continues to serve as a
-              source of inspiration for modern architecture, not just in Nepal
-              but also around the world. Contemporary architects incorporate the
-              aesthetic and symbolic aspects of the pagoda to design new
-              buildings that pay tribute to old traditions while also attending
-              to modern requirements.
-            </p>
-            <p>
-              Pagoda-style temples in Nepal hold appeal for both tourists and
-              scholars who have a keen interest in the country's abundant
-              architectural and spiritual legacy. Their contributions provide
-              significant perspectives on the religious customs, artistic
-              heritage, and historical development of the nation.
-            </p>
-            <p>
-              Community Engagement: The conservation and utilisation of
-              pagoda-style temples cultivate a feeling of communal belonging and
-              uninterrupted tradition. Local festivals, ceremonies, and rituals
-              conducted at these temples serve to uphold cultural customs and
-              enhance social cohesion within the community.
+              Historically, pagodas were constructed with the dual purpose of
+              safeguarding artefacts and sacred scriptures, therefore
+              functioning as a fortress and a central storehouse of spiritual
+              knowledge.
             </p>
 
             <h4 class="text-uppercase mb-3 text-primary">Conclusion</h4>
             <p>
-              Pagoda-style temples transcend being mere architectural wonders;
-              they epitomise spiritual importance, cultural legacy, and
-              historical perpetuity. The tiered roofs and elaborate carvings
-              provide insight into the religious and philosophical customs of
-              Nepal, showcasing a seamless fusion of creativity and
-              spirituality. Pagoda-style temples, acting as both historical
-              landmarks and places of worship, persistently inspire and enthral,
-              therefore safeguarding the magnificent heritage of Nepalese
-              architecture for future generations.
+              In simple terms, pagodas encompass a diverse array of spiritual
+              and metaphorical connotations, ranging from mirroring the
+              organisation of the cosmos and the path to enlightenment to
+              encapsulating cultural principles of unity and equilibrium. Their
+              design and function are intricately connected to the theological
+              and philosophical traditions in which they are established.
             </p>
           </div>
           <!-- Blog Detail End -->
@@ -325,7 +264,7 @@
           <a href="index.html" class="navbar-brand">
             <h1 class="m-0 display-4">
               <img
-                style="max-height: 300px; min-height: 200px;"
+                style="max-height: 300px; min-height: 200px"
                 src="img/footer-logo.png"
                 alt="Y.S. Builders Footer Logo"
               />
