--- a/blog.html
+++ b/blog.html
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">The Unique Charm of <span class="text-primary"> Wooden Carvings</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-7.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -304,7 +304,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">Pagoda-Style Temples: <span class="text-primary"> A Glimpse into Spirituality</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-8.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                         <h4 class="text-uppercase mb-3">Symbolism and Spiritual <span class="text-primary"> Significance of pagoda</span></h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold" href="blog-9.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
