--- a/blog.html
+++ b/blog.html
@@ -326,7 +326,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <nav aria-label="Page navigation">
                   <ul class="pagination pagination-lg justify-content-center m-0">
                     <li class="page-item disabled">
@@ -346,7 +346,7 @@
                     </li>
                   </ul>
                 </nav>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Blog End -->
