--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     />
 
     <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link
       href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
@@ -148,16 +149,16 @@
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
-              <div class="p-3" style="max-width: 1000px">
+              <div class="p-3 animated slideInDown" style="max-width: 1000px"  data-wow-delay="0.2s">
                 <i
                   class="fa fa-home fa-4x text-primary mb-4 d-none d-sm-block"
                 ></i>
-                <h1 class="display-2 text-uppercase text-white mb-md-4">
+                <h1 class="display-2 text-uppercase text-white mb-md-4 animated slideInDown" data-wow-delay="0.4s">
                   Build Your Dream House With Us
                 </h1>
                 <a
                   href="contact.html"
-                  class="btn btn-primary py-md-3 px-md-5 mt-2"
+                  class="btn btn-primary py-md-3 px-md-5 mt-2 wow fadeInRight" data-wow-delay="0.2s"
                   >Contact Us</a
                 >
               </div>
@@ -210,10 +211,10 @@
     <div class="container-fluid py-6 px-5 bg-yellow" >
       <div class="row g-5">
         <div class="col-lg-7">
-          <h1 class="display-5 text-uppercase mb-4">
+          <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.5s">
             Why <span class="text-primary">Y.S. Builders?</span>
           </h1>
-          <h2 class="text-uppercase mb-3">
+          <h2 class="text-uppercase mb-3 animated slideInDown" data-wow-delay="0.3s">
             Since
             <span class="text-primary">
               2066 B.S.</span
@@ -937,9 +938,11 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
