--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </h1>
                 <a
                   href="contact.html"
-                  class="btn btn-primary py-md-3 px-md-5 mt-2 wow fadeInRight" data-wow-delay="0.2s"
+                  class="btn btn-primary py-md-3 px-md-5 mt-2 wow fadeInRight" data-wow-delay="0.5s"
                   >Contact Us</a
                 >
               </div>
@@ -211,16 +211,16 @@
     <div class="container-fluid py-6 px-5 bg-yellow" >
       <div class="row g-5">
         <div class="col-lg-7">
-          <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.5s">
+          <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
             Why <span class="text-primary">Y.S. Builders?</span>
           </h1>
-          <h2 class="text-uppercase mb-3 animated slideInDown" data-wow-delay="0.3s">
+          <h2 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
             Since
             <span class="text-primary">
               2066 B.S.</span
             >
           </h2>
-          <h2 class="text-uppercase mb-3">
+          <h2 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
             Select our construction firm for our unmatched
             <span class="text-primary">
               dedication to excellence, punctual project completion, and
@@ -228,7 +228,7 @@
             >
             customised to fulfil your every requirement.
           </h2>
-          <div class="row gx-5 py-2">
+          <div class="row gx-5 py-2 wow fadeInUp" data-wow-delay="0.7s">
             <div class="col-sm-6 mb-2">
               <p class="fw-bold mb-2">
                 <i class="fa fa-check text-primary me-3"></i>Expertise and
@@ -273,7 +273,7 @@
             </div>
           </div>
           <br/>
-          <div class="text-center" style="max-width: 400px">
+          <div class="text-center wow fadeInUp" data-wow-delay="0.8s" style="max-width: 400px">
             <a
               href="about.html"
               class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
@@ -282,7 +282,7 @@
           </div>
         </div>
         
-        <div class="col-lg-5 pb-5" style="min-height: 360px; min-width: 410px;">
+        <div class="col-lg-5 pb-5 wow fadeInUp" data-wow-delay="0.7s" style="min-height: 360px; min-width: 410px;">
           <div class="position-relative h-100 ms-5">
             <img
               class="position-absolute about-img w-100 h-100 mt-3 ms-n5"
@@ -937,6 +937,7 @@
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
