--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@
     <!-- Services Start -->
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4">
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Our <span class="text-primary">Services</span>
         </h1>
       </div>
       <div class="row g-5">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow d-flex flex-column align-items-center text-center" 
           >
@@ -316,7 +316,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -329,7 +329,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -342,7 +342,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -356,7 +356,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -370,7 +370,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -383,7 +383,7 @@
             </div>
           </div>
         </div>
-        <div class="text-center mx-auto" style="max-width: 600px">
+        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.6s" style="max-width: 600px">
           <a
             href="project.html"
             class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
@@ -399,11 +399,11 @@
       <div class="row gx-5">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="mb-4">
-            <h1 class="display-5 text-uppercase mb-4">
+            <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
               Get In <span class="text-primary">Touch</span>
             </h1>
           </div>
-          <p class="fs-5 mb-0">
+          <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
             Building your architectural aspirations, incrementally. Whether you
             are prepared to start on your next significant endeavour or are
             seeking assistance, we are available to provide guidance. Contact us
@@ -411,16 +411,16 @@
             exceptional.
           </p>
           <br />
-          <a class="btn btn-primary py-3 px-5" href="contact.html"
+          <a class="btn btn-primary py-3 px-5 wow fadeInUp" data-wow-delay="0.8s" href="contact.html"
             >Contact Us</a
           >
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
           <div class="bg-light text-center p-5">
             <form action="https://api.web3forms.com/submit"
             method="POST">
               <div class="row g-3">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                   <input
                       type="hidden"
                       name="access_key"
@@ -435,7 +435,7 @@
                     style="height: 55px" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                   <input
                     type="email"
                     id="email"
@@ -445,7 +445,7 @@
                     name="Email Address" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                   <input
                     type="text"
                     id="subject"
@@ -455,7 +455,7 @@
                     name="Subject" required
                   />
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                   <input
                     type="number"
                     id="contact-number"
@@ -466,7 +466,7 @@
                   />
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
                   <textarea
                     class="form-control border-0"
                     rows="5"
@@ -480,7 +480,7 @@
                   name="redirect"
                   value="https://www.ysbuilders.com.np/thanks.html"
                 />
-                <div class="h-captcha" data-captcha="true"></div>
+                <div class="h-captcha wow fadeInUp" data-wow-delay="0.8s" data-captcha="true"></div>
                 <input
                   type="checkbox"
                   name="botcheck"
@@ -488,7 +488,7 @@
                   style="display: none"
                 />
                 <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
+                  <button class="btn btn-primary w-100 py-3 wow fadeInUp" data-wow-delay="0.9s" type="submit">
                     Submit Form
                   </button>
                 </div>
@@ -503,7 +503,7 @@
     <!-- Portfolio Start -->
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4">
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Some Of Our <span class="text-primary">Successfull</span> Projects
         </h1>
       </div>
@@ -534,7 +534,7 @@
             </div>
         </div> -->
       <div class="row g-5 portfolio-container">
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -555,7 +555,7 @@
             </a>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.6s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -576,7 +576,7 @@
             </a>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.8s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -598,7 +598,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center mx-auto" style="max-width: 300px">
+      <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.9s" style="max-width: 300px">
         <a
           href="project.html"
           class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
@@ -614,15 +614,15 @@
     <!-- Testimonial Start -->
     <div class="container-fluid bg-yellow py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4">
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
           What Our <span class="text-primary">Happy Clients</span> Say!!!
         </h1>
       </div>
       <div class="row gx-0 align-items-center">
-        <div class="col-xl-4 col-lg-5 d-none d-lg-block">
+        <div class="col-xl-4 col-lg-5 d-none d-lg-block wow fadeInUp" data-wow-delay="0.5s">
           <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
         </div>
-        <div class="col-xl-8 col-lg-7 col-md-12">
+        <div class="col-xl-8 col-lg-7 col-md-12 wow fadeInUp" data-wow-delay="0.7s">
           <div class="testimonial bg-light">
             <div class="owl-carousel testimonial-carousel">
               <div class="row gx-4 align-items-center">
@@ -699,12 +699,12 @@
     <!-- Blog Start -->
     <div class="container-fluid py-6 px-5 bg-light">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4">
+        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Latest <span class="text-primary">Articles</span> From <span class="text-primary">Our Blog</span> Post
         </h1>
       </div>
       <div class="row g-5">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
             <div class="p-4">
@@ -735,7 +735,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
             <div class="p-4">
@@ -767,7 +767,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
             <div class="p-4">
@@ -805,7 +805,7 @@
     <!-- Location Start -->
     <div class="container-fluid bg-yellow overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
-        <h1 class="display-5 text-uppercase text-center mb-4">
+        <h1 class="display-5 text-uppercase text-center mb-4 wow fadeInUp" data-wow-delay="0.3s">
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
