--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item ">
             <img class="w-100" src="img/home/carousel-3.webp" alt="Image" />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
@@ -394,111 +394,111 @@
     </div>
     <!-- Services End -->
 
-    <!-- Appointment Start -->
-    <div class="container-fluid bg-yellow py-6 px-5">
-      <div class="row gx-5">
-        <div class="col-lg-4 mb-5 mb-lg-0">
-          <div class="mb-4">
-            <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
-              Get In <span class="text-primary">Touch</span>
-            </h1>
-          </div>
-          <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
-            Building your architectural aspirations, incrementally. Whether you
-            are prepared to start on your next significant endeavour or are
-            seeking assistance, we are available to provide guidance. Contact us
-            immediately, and let us collaborate to produce something
-            exceptional.
-          </p>
-          <br />
-          <a class="btn btn-primary py-3 px-5 wow fadeInUp" data-wow-delay="0.8s" href="contact.html"
-            >Contact Us</a
-          >
+   <!-- Appointment Start -->
+   <div class="container-fluid bg-yellow py-6 px-5">
+    <div class="row gx-5">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="mb-4">
+          <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
+            Get In <span class="text-primary">Touch</span>
+          </h1>
         </div>
-        <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="bg-light text-center p-5">
-            <form action="https://api.web3forms.com/submit"
-            method="POST">
-              <div class="row g-3">
-                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                  <input
-                      type="hidden"
-                      name="access_key"
-                      value="ac0fc024-542b-49d8-8815-891454511d69"
-                    />
-                  <input
-                    type="text"
-                    id="name"
-                    class="form-control border-0"
-                    placeholder="Your Name"
-                    name="Name"
-                    style="height: 55px" required
-                  />
-                </div>
-                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                  <input
-                    type="email"
-                    id="email"
-                    class="form-control border-0"
-                    placeholder="Your Email"
-                    style="height: 55px"
-                    name="Email Address" required
-                  />
-                </div>
-                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                  <input
-                    type="text"
-                    id="subject"
-                    class="form-control border-0"
-                    placeholder="Subject"
-                    style="height: 55px"
-                    name="Subject" required
-                  />
-                </div>
-                <div class="col-12 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                  <input
-                    type="number"
-                    id="contact-number"
-                    class="form-control border-0"
-                    placeholder="Your Phone Number"
-                    style="height: 55px"
-                    name="Phone Number" required
-                  />
-                </div>
-
-                <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
-                  <textarea
-                    class="form-control border-0"
-                    rows="5"
-                    id="message"
-                    placeholder="Message"
-                    name="Message" required
-                  ></textarea>
-                </div>
+        <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
+          Building your architectural aspirations, incrementally. Whether you
+          are prepared to start on your next significant endeavour or are
+          seeking assistance, we are available to provide guidance. Contact us
+          immediately, and let us collaborate to produce something
+          exceptional.
+        </p>
+        <br />
+        <a class="btn btn-primary py-3 px-5 wow fadeInUp" data-wow-delay="0.8s" href="contact.html"
+          >Contact Us</a
+        >
+      </div>
+      <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="bg-light text-center p-5">
+          <form action="https://api.web3forms.com/submit"
+          method="POST">
+            <div class="row g-3">
+              <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.6s">
                 <input
-                  type="hidden"
-                  name="redirect"
-                  value="https://www.ysbuilders.com.np/thanks.html"
-                />
-                <div class="h-captcha wow fadeInUp" data-wow-delay="0.8s" data-captcha="true"></div>
+                    type="hidden"
+                    name="access_key"
+                    value="ac0fc024-542b-49d8-8815-891454511d69"
+                  />
                 <input
-                  type="checkbox"
-                  name="botcheck"
-                  class="hidden"
-                  style="display: none"
+                  type="text"
+                  id="name"
+                  class="form-control border-0"
+                  placeholder="Your Name"
+                  name="Name"
+                  style="height: 55px" required
                 />
-                <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3 wow fadeInUp" data-wow-delay="0.9s" type="submit">
-                    Submit Form
-                  </button>
-                </div>
               </div>
-            </form>
-          </div>
+              <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.6s">
+                <input
+                  type="email"
+                  id="email"
+                  class="form-control border-0"
+                  placeholder="Your Email"
+                  style="height: 55px"
+                  name="Email Address" required
+                />
+              </div>
+              <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.7s">
+                <input
+                  type="text"
+                  id="subject"
+                  class="form-control border-0"
+                  placeholder="Subject"
+                  style="height: 55px"
+                  name="Subject" required
+                />
+              </div>
+              <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.7s">
+                <input
+                  type="number"
+                  id="contact-number"
+                  class="form-control border-0"
+                  placeholder="Your Phone Number"
+                  style="height: 55px"
+                  name="Phone Number" required
+                />
+              </div>
+
+              <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
+                <textarea
+                  class="form-control border-0"
+                  rows="5"
+                  id="message"
+                  placeholder="Message"
+                  name="Message" required
+                ></textarea>
+              </div>
+              <input
+                type="hidden"
+                name="redirect"
+                value="https://www.ysbuilders.com.np/thanks.html"
+              />
+              <div class="h-captcha wow fadeInUp" data-wow-delay="0.8s" data-captcha="true"></div>
+              <input
+                type="checkbox"
+                name="botcheck"
+                class="hidden"
+                style="display: none"
+              />
+              <div class="col-12">
+                <button class="btn btn-primary w-100 py-3 wow fadeInUp" data-wow-delay="0.9s" type="submit">
+                  Submit Form
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-    <!-- Appointment End -->
+  </div>
+  <!-- Appointment End -->
 
     <!-- Portfolio Start -->
     <div class="container-fluid bg-light py-6 px-5">
@@ -611,91 +611,90 @@
 
     
 
-    <!-- Testimonial Start -->
-    <div class="container-fluid bg-yellow py-6 px-5">
-      <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
-          What Our <span class="text-primary">Happy Clients</span> Say!!!
-        </h1>
+   <!-- Testimonial Start -->
+   <div class="container-fluid bg-yellow py-6 px-5">
+    <div class="text-center mx-auto mb-5" style="max-width: 600px">
+      <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
+        What Our <span class="text-primary">Happy Clients</span> Say!!!
+      </h1>
+    </div>
+    <div class="row gx-0 align-items-center">
+      <div class="col-xl-4 col-lg-5 d-none d-lg-block wow fadeInLeft" data-wow-delay="0.5s">
+        <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
       </div>
-      <div class="row gx-0 align-items-center">
-        <div class="col-xl-4 col-lg-5 d-none d-lg-block wow fadeInUp" data-wow-delay="0.5s">
-          <img class="img-fluid w-100 h-100" src="img/testimonial/happy.webp" />
-        </div>
-        <div class="col-xl-8 col-lg-7 col-md-12 wow fadeInUp" data-wow-delay="0.7s">
-          <div class="testimonial bg-light">
-            <div class="owl-carousel testimonial-carousel">
-              <div class="row gx-4 align-items-center">
-                <div class="col-xl-4 col-lg-5 col-md-5">
-                  <img
-                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                    src="img/testimonial/client-1.webp"
-                    alt=""
-                  />
-                </div>
-                <div class="col-xl-8 col-lg-7 col-md-7">
-                  <h4 class="text-uppercase mb-0">Rajesh Shrestha</h4>
-                  <p>Business Owner</p>
-                  <p class="fs-5 mb-0">
-                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
-                    Choosing Y.S. Builders for our new commercial building was
-                    the best decision we made. Their team delivered top-quality
-                    work with great attention to detail, and the project was
-                    completed on time. We’re extremely happy with the results!
-                  </p>
-                </div>
+      <div class="col-xl-8 col-lg-7 col-md-12 wow fadeInRight" data-wow-delay="0.7s">
+        <div class="testimonial bg-light">
+          <div class="owl-carousel testimonial-carousel">
+            <div class="row gx-4 align-items-center">
+              <div class="col-xl-4 col-lg-5 col-md-5">
+                <img
+                  class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                  src="img/testimonial/client-1.webp"
+                  alt=""
+                />
               </div>
-              <div class="row gx-4 align-items-center">
-                <div class="col-xl-4 col-lg-5 col-md-5">
-                  <img
-                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                    src="img/testimonial/client-3.webp"
-                    alt=""
-                  />
-                </div>
-                <div class="col-xl-8 col-lg-7 col-md-7">
-                  <h4 class="text-uppercase mb-0">Srijana Maharjan</h4>
-                  <p>Architect</p>
-                  <p class="fs-5 mb-0">
-                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
-                    As an architect, I am always looking for partners who can
-                    bring my designs to life with precision and creativity. Y.S.
-                    Builders exceeded my expectations with their craftsmanship
-                    and professionalism. They truly understand the art of
-                    construction.
-                  </p>
-                </div>
+              <div class="col-xl-8 col-lg-7 col-md-7">
+                <h4 class="text-uppercase mb-0">Rajesh Shrestha</h4>
+                <p>Business Owner</p>
+                <p class="fs-5 mb-0">
+                  <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                  Choosing Y.S. Builders for our new commercial building was
+                  the best decision we made. Their team delivered top-quality
+                  work with great attention to detail, and the project was
+                  completed on time. We’re extremely happy with the results!
+                </p>
               </div>
-              <div class="row gx-4 align-items-center">
-                <div class="col-xl-4 col-lg-5 col-md-5">
-                  <img
-                    class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
-                    src="img/testimonial/client-2.webp"
-                    alt=""
-                  />
-                </div>
-                <div class="col-xl-8 col-lg-7 col-md-7">
-                  <h4 class="text-uppercase mb-0">रमेश शर्मा</h4>
-                  <p>Manager</p>
-                  <p class="fs-5 mb-0">
-                    <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
-                    मेरो घरको निर्माणका लागि म Y.S. Builders सँग काम गर्न पाउँदा
-                    अत्यन्तै खुशी छु। निर्माण प्रक्रियाको हरेक चरणमा उनीहरुको
-                    योजना, व्यवस्थापन, र गुणस्तरप्रतिको प्रतिबद्धता अत्यन्तै
-                    प्रशंसनीय थियो। उनीहरुको अनुभव र व्यावसायिक दक्षताले मेरो घर
-                    समयमै र बिना कुनै झन्झट सम्पन्न गरियो। म भविष्यमा पनि अरू
-                    निर्माण परियोजनाहरूको लागि Y.S. Builders सँग पुनः काम
-                    गर्नेछु।
-                  </p>
-                </div>
+            </div>
+            <div class="row gx-4 align-items-center">
+              <div class="col-xl-4 col-lg-5 col-md-5">
+                <img
+                  class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                  src="img/testimonial/client-3.webp"
+                  alt=""
+                />
+              </div>
+              <div class="col-xl-8 col-lg-7 col-md-7">
+                <h4 class="text-uppercase mb-0">Srijana Maharjan</h4>
+                <p>Architect</p>
+                <p class="fs-5 mb-0">
+                  <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                  As an architect, I am always looking for partners who can
+                  bring my designs to life with precision and creativity. Y.S.
+                  Builders exceeded my expectations with their craftsmanship
+                  and professionalism. They truly understand the art of
+                  construction.
+                </p>
+              </div>
+            </div>
+            <div class="row gx-4 align-items-center">
+              <div class="col-xl-4 col-lg-5 col-md-5">
+                <img
+                  class="img-fluid w-100 h-100 bg-light p-lg-3 mb-4 mb-md-0"
+                  src="img/testimonial/client-2.webp"
+                  alt=""
+                />
+              </div>
+              <div class="col-xl-8 col-lg-7 col-md-7">
+                <h4 class="text-uppercase mb-0">रमेश शर्मा</h4>
+                <p>Manager</p>
+                <p class="fs-5 mb-0">
+                  <i class="fa fa-2x fa-quote-left text-primary me-2"></i>
+                  मेरो घरको निर्माणका लागि म Y.S. Builders सँग काम गर्न पाउँदा
+                  अत्यन्तै खुशी छु। निर्माण प्रक्रियाको हरेक चरणमा उनीहरुको
+                  योजना, व्यवस्थापन, र गुणस्तरप्रतिको प्रतिबद्धता अत्यन्तै
+                  प्रशंसनीय थियो। उनीहरुको अनुभव र व्यावसायिक दक्षताले मेरो घर
+                  समयमै र बिना कुनै झन्झट सम्पन्न गरियो। म भविष्यमा पनि अरू
+                  निर्माण परियोजनाहरूको लागि Y.S. Builders सँग पुनः काम
+                  गर्नेछु।
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Testimonial End -->
-
+  </div>
+  <!-- Testimonial End -->
     <!-- Blog Start -->
     <div class="container-fluid py-6 px-5 bg-light">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
@@ -703,7 +702,7 @@
           Latest <span class="text-primary">Articles</span> From <span class="text-primary">Our Blog</span> Post
         </h1>
       </div>
-      <div class="row g-5">
+      <div class="row g-5 mb-4">
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
@@ -798,6 +797,13 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.9s" style="max-width: 300px">
+        <a
+          href="blog.html"
+          class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
+          >View More Blogs<i class="bi bi-arrow-right"></i
+        ></a>
       </div>
     </div>
     <!-- Blog End -->
@@ -932,8 +938,7 @@
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
-      ><i class="bi bi-arrow-up"></i
-    ></a>
+      ><i class="bi bi-arrow-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
