--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
     />
 
     <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link
       href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
@@ -137,29 +138,29 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-      <h1 class="display-3 text-uppercase text-white mb-3">Contact</h1>
+      <h1 class="display-3 text-uppercase text-white mb-3 wow fadeInUp" data-wow-delay="0.2s">Contact</h1>
       <div class="d-inline-flex text-white">
-        <h6 class="text-uppercase m-0"><a href="">Home</a></h6>
-        <h6 class="text-white m-0 px-3">/</h6>
-        <h6 class="text-uppercase text-white m-0">Contact</h6>
+          <h6 class="text-uppercase m-0 wow fadeInLeft" data-wow-delay="0.4s"><a href="index.html">Home</a></h6>
+          <h6 class="text-white m-0 px-3 wow fadeInUp" data-wow-delay="0.5s">/</h6>
+          <h6 class="text-uppercase text-white m-0 wow fadeInRight" data-wow-delay="0.6s">Contact</h6>
       </div>
-    </div>
-    <!-- Page Header Start -->
+  </div>
+  <!-- Page Header Start -->
 
-    <section class="ftco-section p-5 contact-section">
-      <h1 class="text-center display-5  text-uppercase"><span class="text-primary">Contact Us</span></h1>
-      <h1 class="text-center display-5  text-uppercase">for any Query</h1>
+    <section class="ftco-section p-5 bg-yellow contact-section">
+      <h1 class="text-center display-5  text-uppercase"><span class="text-primary wow fadeInUp" data-wow-delay="0.5s">Contact Us</span></h1>
+      <h1 class="text-center display-5  text-uppercase wow fadeInUp" data-wow-delay="0.6s">for any Query</h1>
       <br />
       <div class="container">
         <div class="row block-9">
-          <div class="col-md-6 d-flex">
+          <div class="col-md-6 d-flex wow fadeInLeft" data-wow-delay="0.3s">
             <form
-              class="bg-white p-5 contact-form"
+              class="bg-light p-5 contact-form"
               action="https://api.web3forms.com/submit"
               method="POST"
             >
               <div class="row g-3">
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="firstname" class="text-dark">First Name:</label>
                   <br />
                   <div class="form-floating">
@@ -177,7 +178,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="lastname" class="text-dark">Last Name:</label>
                   <br />
                   <div class="form-floating">
@@ -189,7 +190,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="email" class="text-dark">Email :</label>
                   <br />
                   <div class="form-floating">
@@ -201,7 +202,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="address" class="text-dark">Current Address: </label>
                   <br />
                   <div class="form-floating">
@@ -213,7 +214,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="contact-number" class="text-dark"
                     >Contact Number:</label
                   >
@@ -228,7 +229,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 wow fadeInRight" data-wow-delay="0.4s">
                   <label for="message" class="text-dark">Messages: </label>
                   <br />
                   <div class="form-floating">
@@ -247,16 +248,16 @@
                   name="redirect"
                   value="https://www.ysbuilders.com.np/thanks.html"
                 />
-                <div class="h-captcha" data-captcha="true"></div>
+                <div class="h-captcha wow fadeInRight" data-wow-delay="0.6s" data-captcha="true"></div>
                 <input
                   type="checkbox"
                   name="botcheck"
                   class="hidden"
                   style="display: none"
                 />
-                <div class="col-12">
+                <div class="col-12 wow fadeInUp" data-wow-delay="0.7s">
                   <button
-                    style="background-color: #008080; color: #fff"
+                    style="color: #fff"
                     class="btn btn-primary w-100 py-3 animated"
                     type="submit"
                   >
@@ -268,7 +269,7 @@
           </div>
           <div
             class="col-md-6  wow slideInRight"
-            data-wow-delay="0.1s"
+            data-wow-delay="0.3s"
             style="min-height: 400px"
           >
             <div class="position-relative h-100">
@@ -399,6 +400,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
