--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </h1>
       </div>
       <div class="row g-5">
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow d-flex flex-column align-items-center text-center" 
           >
@@ -329,7 +329,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+        <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -342,7 +342,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -370,7 +370,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+        <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
           <div
             class="service-item service-radius bg-yellow rounded d-flex flex-column align-items-center text-center"
           >
@@ -534,7 +534,7 @@
             </div>
         </div> -->
       <div class="row g-5 portfolio-container">
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInLeft" data-wow-delay="0.3s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -555,7 +555,7 @@
             </a>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.6s">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -576,7 +576,7 @@
             </a>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.8s">
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first wow fadeInRight" data-wow-delay="0.7s">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
@@ -703,7 +703,7 @@
         </h1>
       </div>
       <div class="row g-5 mb-4">
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+        <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
             <div class="p-4">
@@ -734,7 +734,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
             <div class="p-4">
@@ -766,7 +766,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+        <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
           <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
             <div class="p-4">
@@ -815,7 +815,7 @@
           Latest <span class="text-primary">Our</span> Location
         </h1>
         <div
-          class="col-md-12 wow fadeInRight"
+          class="col-md-12 wow fadeInDown"
           data-wow-delay="0.1s"
           style="height: 500px"
         >
